# LibtorrentSDK

./: .gitignore  Package.swift  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: release-xcframework.yml
NativeBridge/: CMakeLists.txt
NativeBridge/include/: LibtorrentNative.h
NativeBridge/src/: LibtorrentNative.cpp
Sources/LibtorrentSDK/: LibtorrentSDK.swift  NativeLibtorrentSession.swift
Tests/LibtorrentSDKSmokeTests/: main.swift
Tests/LibtorrentSDKTests/: NativeLibtorrentSessionTests.swift
scripts/: build-libtorrent-native-xcframework.sh
